[package]
name = "domain"
version = "0.1.0"
authors = ["CympleTech <dev@cympletech.com>"]
edition = "2021"
readme = "README.md"
description = "ESSE domain service."
repository = "https://github.com/cympletech/domain"
keywords = ["distributed", "p2p", "domain"]
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0"
log = "0.4"
simplelog = "0.11"
blake3 = "1.2"
aes-gcm = "0.9"
sysinfo = "0.21"
once_cell = "1.8"
config = "0.11"
dotenv = "0.15"
hex = "0.4"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres" ] }
tdn = { version = "0.6", default-features = false, features = ["full"] }
tdn_did = { version = "0.6" }
tdn_storage = { git = "https://github.com/cympletech/tdn", branch="main" }
domain_types = { git = "https://github.com/cympletech/esse", branch="main" }
